--- a/style.css
+++ b/style.css
@@ -1062,3 +1062,12 @@ h4 {
 p{
     font-size: 14px;
 }
+
+li a{
+    color: #000000!important;
+}
+
+.col-sm-4 p
+{
+    color: #FFFFFF!important;
+}
